--- a/querybase-ui/src/main/public/develop.html
+++ b/querybase-ui/src/main/public/develop.html
@@ -47,6 +47,7 @@
 <!--
 <script type="text/javascript" src="index-library.js"></script>
 -->
+<script type="text/javascript" src="index-library.js"></script>
 <script type="text/javascript" src="querybase-ui-fastopt-library.js"></script>
 <script type="text/javascript" src="querybase-ui-fastopt-loader.js"></script>
 <script type="text/javascript" src="querybase-ui-fastopt.js"></script>
