--- a/querybase-ui/src/main/public/index.html
+++ b/querybase-ui/src/main/public/index.html
@@ -20,10 +20,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="shortcut icon" href="img/favicon.ico"/>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/default.min.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="css/overwrite.css"/>
     <script src="https://kit.fontawesome.com/8c311a9c44.js" crossorigin="anonymous"></script>
     <title>Querybase</title>
@@ -43,12 +42,14 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 <script src="scripts/highlight.pack.js"></script>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
 
 <!--
 <script type="text/javascript" src="index-library.js"></script>
 -->
-<script type="text/javascript" src="querybase-ui-opt-library.js"></script>
-<script type="text/javascript" src="querybase-ui-opt-loader.js"></script>
-<script type="text/javascript" src="querybase-ui-opt.js"></script>
+<script type="text/javascript" src="index-library.js"></script>
+<script type="text/javascript" src="querybase-ui-fastopt-library.js"></script>
+<script type="text/javascript" src="querybase-ui-fastopt-loader.js"></script>
+<script type="text/javascript" src="querybase-ui-fastopt.js"></script>
 
 </html>
